{
    "name": "InputActions",
    "maps": [
        {
            "name": "Figure",
            "id": "578ca402-445e-4cfa-a23d-e47fd1c28582",
            "actions": [
                {
                    "name": "Rotation",
                    "type": "Button",
                    "id": "a48135e5-e2c7-4e25-9186-17af56176a51",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "X-axis",
                    "id": "6d920bdd-5e54-4a91-97b0-068bf8d9c9f5",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "7e55833d-a444-4ab3-a3f0-9c8ed1c0a7b7",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "cddfbfb1-c0f0-4c22-9d2f-af1c5ebad16a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}