{
    "name": "LevelMenu",
    "maps": [
        {
            "name": "CubeControl",
            "id": "39c86813-daee-4bfc-91df-8638bd1a5228",
            "actions": [
                {
                    "name": "Rotation",
                    "type": "PassThrough",
                    "id": "ffd7c01f-d776-44a8-a62a-52781bcc0514",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Selection",
                    "type": "Button",
                    "id": "c20c14aa-7a57-48c0-8dd4-8c3c41a1c9e6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "11f2b311-f018-4de7-9723-4da220615bb6",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "36a6747f-a3ff-4535-9a16-3dc75082f83e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Selection",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "SceneControl",
            "id": "2ece32ad-a9f0-42a7-805c-7f428a5d4e8e",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "6d75bec8-c8b3-41ef-8dd2-73bfd3544945",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6ef74f30-20b6-4003-868c-2bd7853d44dd",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Switching",
            "id": "543f73be-fd3b-4f1f-a587-05b2b645703c",
            "actions": [
                {
                    "name": "Selection",
                    "type": "Button",
                    "id": "bc639b2e-e5fd-4632-85ea-218d4d4f26ff",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ed4d4475-f777-4619-82ac-5c445aad5751",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Selection",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}